[tool.isort]
profile = "black"

[tool.poetry]
name = "cli-ui"
version = "0.17.2"
description = "Build Nice User Interfaces In The Terminal"
readme = "README.rst"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
license = "BSD-3-Clause"
repository = "https://git.sr.ht/~your-tools/python-cli-ui"
documentation = "https://your-tools.github.io/python-cli-ui/"

[tool.poetry.urls]
Changelog = "https://your-tools.github.io/python-cli-ui/changelog.html"
Issues = "https://github.com/your-tools/python-cli-ui/issues"

[tool.poetry.dependencies]
# Keep this in sync with .github/workflows/
python = "^3.7"

colorama = "^0.4.1"
tabulate = "^0.8.3"
unidecode = "^1.0.23"

[tool.poetry.dev-dependencies]
# Tests
pytest = "^7.0.0"
pytest-cov = "^3.0.0"

# Linters
black = "^22.3"
flake8 = "^5.0"
flake8-bugbear = "^22.7"
flake8-comprehensions = "^3.10.0"
pep8-naming = "^0.13.1"
isort = "^5.7.0"
types-tabulate = "^0.1.0"
mypy = "0.960"

# Deps scanning
safety = "^1.9.0"

# Documentation
sphinx  = "^4.1.2"
sphinx-autobuild = "2021.3.14"
ghp-import = "^0.5.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
