[tool.isort]
profile = "black"

[tool.poetry]
name = "cli-ui"
version = "0.18.0"
description = "Build Nice User Interfaces In The Terminal"
readme = "README.rst"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
license = "BSD-3-Clause"
repository = "https://git.sr.ht/~your-tools/python-cli-ui"
documentation = "https://your-tools.github.io/python-cli-ui/"

[tool.poetry.urls]
Changelog = "https://your-tools.github.io/python-cli-ui/changelog.html"
Issues = "https://github.com/your-tools/python-cli-ui/issues"

[tool.poetry.dependencies]
# Keep this in sync with .github/workflows/
python = "^3.9"

colorama = "^0.4.1"
tabulate = "^0.9.0"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
# Tests
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

# Linters
black = ">=22.3,<25.0"
flake8 = "^6.0"
flake8-bugbear = "^22.12"
flake8-comprehensions = "^3.10.0"
pep8-naming = "^0.13.1"
isort = "^5.10.0"
types-tabulate = "^0.9.0"
mypy = "0.991"

# Documentation
sphinx  = "^5.3.0"
sphinx-autobuild = "2021.3.14"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
