[project]
name = "cli-ui"
version = "0.19.0"
description = "Build Nice User Interfaces In The Terminal"
readme = "README.rst"
authors = [{ name = "Dimitri Merejkowsky", email = "dimitri@dmerej.info" }]
license = "BSD-3-Clause"
repository = "https://git.sr.ht/~your-tools/python-cli-ui"
documentation = "https://your-tools.github.io/python-cli-ui/"
dynamic = ["requires-python", "dependencies"]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"

colorama = "^0.4.1"
tabulate = "^0.9.0"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
# Tests
pytest = "^8.3"
pytest-cov = "^6.0.0"

# Linters
black = "^25"
flake8 = "^7.1"
flake8-bugbear = "^24.12"
flake8-comprehensions = "^3.10.0"
pep8-naming = "^0.14.1"
isort = "^6.0"
types-tabulate = "^0.9.0"
mypy = "0.991"

# Documentation
sphinx  = "^7.4"
sphinx-autobuild = "2024.10.3"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
