[pycodestyle]
ignore=E221,E731

[metadata]
name = cli-ui
version = 0.9.0
long_description = file: README.rst
summary = Build Nice User Interfaces In The Terminal
url = https://github.com/TankerHQ/python-cli-ui
author = Dimitri Merejkowsky
classifiers =
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
packages: find:
install_requires =
  colorama
  tabulate
  unidecode

[options.extras_require]
dev =
  # doc
  sphinx
  ghp-import

  # linters
  black
  mypy
  pyflakes

  # tests
  pytest

  # publish
  twine
  wheel
